Closed Bug 86973 Opened 23 years ago Closed 23 years ago

[crash] @nsHttpTransaction::IsDone() [mTransaction is NULL]

Categories

(Core :: Networking: HTTP, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.2

People

(Reporter: darin.moz, Assigned: darin.moz)

References

Details

(Keywords: crash, Whiteboard: [PDT+] r=bbaetz, sr=dougt, a=chofmann (ready to checkin), critical for 0.9.2)

Attachments

(2 files)

Subject:
[Fwd: From Liz, Re: today's build]
From:
peterlubczynski@netscape.com (Peter Lubczynski)
Date:
Wed, 20 Jun 2001 13:37:37 -0700
To:
av@netscape.com
CC:
Doug Turner <dougt@netscape.com>, Arun Ranganathan <aruner@netscape.com>

Ouch! I get a crash on any full-page PDF on my fresh build. Stack doesn't have
any plugin code. I'm running with the NS_IF_RELEASE but perhaps we may need more
for plugins as the top of the stack, the nsHttpTransaction, is null????

nsHttpTransaction::IsDone() line 76 + 10 bytes
nsHttpConnection::ActivateConnection() line 366 + 11 bytes
nsHttpConnection::SetTransaction(nsHttpTransaction * 0x037c0118) line 125
nsHttpHandler::InitiateTransaction_Locked(nsHttpTransaction * 0x037c0118,
nsHttpConnectionInfo * 0x037a6ab8, int 0) line 724 + 12 bytes
nsHttpHandler::InitiateTransaction(nsHttpTransaction * 0x037c0118,
nsHttpConnectionInfo * 0x037a6ab8, int 0) line 369 + 20 bytes
nsHttpChannel::Connect(int 1) line 242
nsHttpChannel::AsyncOpen(nsHttpChannel * const 0x037a6c28, nsIStreamListener *
0x037a60b8, nsISupports * 0x00000000) line 1838 + 10 bytes
nsDocumentOpenInfo::Open(nsIChannel * 0x037a6c28, int 0, nsISupports *
0x033fc8b0) line 184 + 18 bytes
nsURILoader::OpenURIVia(nsURILoader * const 0x00d1f7d0, nsIChannel * 0x037a6c28,
int 0, nsISupports * 0x033fc8b0, unsigned int 0) line 521 + 20 bytes
nsURILoader::OpenURI(nsURILoader * const 0x00d1f7d0, nsIChannel * 0x037a6c28,
int 0, nsISupports * 0x033fc8b0) line 483
nsDocShell::DoChannelLoad(nsIChannel * 0x037a6c28, int 0, nsIURILoader *
0x00d1f7d0) line 4716 + 24 bytes
nsDocShell::DoURILoad(nsIURI * 0x037a66b0, nsIURI * 0x00000000, nsISupports *
0x037b8a08, int 0, nsIInputStream * 0x00000000, nsIInputStream * 0x00000000)
line 4505 + 36 bytes
nsDocShell::InternalLoad(nsDocShell * const 0x033fc8b0, nsIURI * 0x037a66b0,
nsIURI * 0x00000000, nsISupports * 0x00000000, int 1, int 0, const unsigned
short * 0x0012b750, nsIInputStream * 0x00000000, nsIInputStream * 0x00000000,
unsigned int 1, nsISHEntry * 0x00000000) line 4324 + 43 bytes
nsDocShell::LoadURI(nsDocShell * const 0x033fc8b0, nsIURI * 0x037a66b0,
nsIDocShellLoadInfo * 0x00000000, unsigned int 0) line 560 + 72 bytes
nsDocShell::LoadURI(nsDocShell * const 0x033fc8c0, const unsigned short *
0x033a5e08, unsigned int 0) line 2163 + 31 bytes
XPTC_InvokeByIndex(nsISupports * 0x033fc8c0, unsigned int 8, unsigned int 2,
nsXPTCVariant * 0x0012bc00) line 139
XPCWrappedNative::CallMethod(XPCCallContext & {...}, XPCWrappedNative::CallMode
CALL_METHOD) line 1881 + 42 bytes
XPC_WN_CallMethod(JSContext * 0x02878028, JSObject * 0x037dfc80, unsigned int 2,
long * 0x037b9340, long * 0x0012be34) line 1252 + 11 bytes
js_Invoke(JSContext * 0x02878028, unsigned int 2, unsigned int 0) line 807 + 23
bytes
js_Interpret(JSContext * 0x02878028, long * 0x0012cbd8) line 2702 + 15 bytes
js_Invoke(JSContext * 0x02878028, unsigned int 1, unsigned int 0) line 824 + 13
bytes
js_Interpret(JSContext * 0x02878028, long * 0x0012d934) line 2702 + 15 bytes
js_Invoke(JSContext * 0x02878028, unsigned int 1, unsigned int 2) line 824 + 13
bytes
js_InternalInvoke(JSContext * 0x02878028, JSObject * 0x0339e550, long 58588048,
unsigned int 0, unsigned int 1, long * 0x0012db0c, long * 0x0012da5c) line 896 +
20 bytes
JS_CallFunctionValue(JSContext * 0x02878028, JSObject * 0x0339e550, long
58588048, unsigned int 1, long * 0x0012db0c, long * 0x0012da5c) line 3320 + 31 bytes
nsJSContext::CallEventHandler(nsJSContext * const 0x0286e6c0, void * 0x0339e550,
void * 0x037dfb90, unsigned int 1, void * 0x0012db0c, int * 0x0012db08, int 0)
line 941 + 33 bytes
nsJSEventListener::HandleEvent(nsJSEventListener * const 0x037a8a90, nsIDOMEvent
* 0x037ac1dc) line 139 + 57 bytes
nsXBLPrototypeHandler::ExecuteHandler(nsXBLPrototypeHandler * const 0x03523808,
nsIDOMEventReceiver * 0x029d8458, nsIDOMEvent * 0x037ac1dc) line 431
DoKey(nsIAtom * 0x027e1468, nsIXBLPrototypeHandler * 0x03523808, nsIDOMEvent *
0x037ac1dc, nsIDOMEventReceiver * 0x029d8458) line 92
nsXBLKeyHandler::KeyPress(nsXBLKeyHandler * const 0x03515100, nsIDOMEvent *
0x037ac1dc) line 107 + 40 bytes
nsEventListenerManager::HandleEvent(nsEventListenerManager * const 0x028bdbd0,
nsIPresContext * 0x0286b3a0, nsEvent * 0x0012f754, nsIDOMEvent * * 0x0012f2f8,
nsIDOMEventTarget * 0x029d8458, unsigned int 4, nsEventStatus * 0x0012f6c0) line
1592 + 41 bytes
nsXULElement::HandleDOMEvent(nsXULElement * const 0x029d8450, nsIPresContext *
0x0286b3a0, nsEvent * 0x0012f754, nsIDOMEvent * * 0x0012f2f8, unsigned int 4,
nsEventStatus * 0x0012f6c0) line 3635
nsXULElement::HandleDOMEvent(nsXULElement * const 0x035460e8, nsIPresContext *
0x0286b3a0, nsEvent * 0x0012f754, nsIDOMEvent * * 0x0012f2f8, unsigned int 4,
nsEventStatus * 0x0012f6c0) line 3616
nsXULElement::HandleDOMEvent(nsXULElement * const 0x03546520, nsIPresContext *
0x0286b3a0, nsEvent * 0x0012f754, nsIDOMEvent * * 0x0012f2f8, unsigned int 4,
nsEventStatus * 0x0012f6c0) line 3616
nsGenericElement::HandleDOMEvent(nsGenericElement * const 0x0354ab28,
nsIPresContext * 0x0286b3a0, nsEvent * 0x0012f754, nsIDOMEvent * * 0x0012f2f8,
unsigned int 1, nsEventStatus * 0x0012f6c0) line 1654
nsHTMLInputElement::HandleDOMEvent(nsHTMLInputElement * const 0x0354ab28,
nsIPresContext * 0x0286b3a0, nsEvent * 0x0012f754, nsIDOMEvent * * 0x00000000,
unsigned int 1, nsEventStatus * 0x0012f6c0) line 1079 + 29 bytes
PresShell::HandleEventInternal(nsEvent * 0x0012f754, nsIView * 0x0286bcd8,
unsigned int 1, nsEventStatus * 0x0012f6c0) line 5564 + 47 bytes
PresShell::HandleEvent(PresShell * const 0x02870144, nsIView * 0x0286bcd8,
nsGUIEvent * 0x0012f754, nsEventStatus * 0x0012f6c0, int 1, int & 1) line 5491 +
25 bytes
nsView::HandleEvent(nsView * const 0x0286bcd8, nsGUIEvent * 0x0012f754, unsigned
int 28, nsEventStatus * 0x0012f6c0, int 1, int & 1) line 377
nsViewManager::DispatchEvent(nsViewManager * const 0x0286bac8, nsGUIEvent *
0x0012f754, nsEventStatus * 0x0012f6c0) line 2051
HandleEvent(nsGUIEvent * 0x0012f754) line 68
nsWindow::DispatchEvent(nsWindow * const 0x0286bd74, nsGUIEvent * 0x0012f754,
nsEventStatus & nsEventStatus_eIgnore) line 720 + 10 bytes
nsWindow::DispatchWindowEvent(nsGUIEvent * 0x0012f754) line 741
nsWindow::DispatchKeyEvent(unsigned int 131, unsigned short 0, unsigned int 13)
line 2389 + 15 bytes
nsWindow::OnChar(unsigned int 13, unsigned int 13, unsigned char 1) line 2515
nsWindow::ProcessMessage(unsigned int 258, unsigned int 13, long 1835009, long *
0x0012fb9c) line 3071 + 51 bytes
nsWindow::WindowProc(HWND__ * 0x000108e2, unsigned int 258, unsigned int 13,
long 1835009) line 988 + 27 bytes
USER32! UserCallWinProc@20 + 24 bytes
USER32! DispatchMessageWorker@8 + 244 bytes
USER32! DispatchMessageA@4 + 11 bytes
nsAppShell::Run(nsAppShell * const 0x00d05490) line 108
nsAppShellService::Run(nsAppShellService * const 0x00d06178) line 419
main1(int 3, char * * 0x00357fd0, nsISupports * 0x00000000) line 1154 + 32 bytes
main(int 3, char * * 0x00357fd0) line 1452 + 37 bytes
mainCRTStartup() line 338 + 17 bytes
Status: NEW → ASSIGNED
Keywords: crash
Priority: -- → P1
Target Milestone: --- → mozilla0.9.2
Severity: normal → critical
Whiteboard: [PDT+]
Darin, do you have/need help on this one?  I notice you're helping the plugin
guys and I worry that you might be overloaded.
Whiteboard: [PDT+] → [PDT+] need eta
think i've got a patch for this one... but, i'll need help testing it.  attaching...
Keywords: patch
r=bbaetz
darin, how about making |nsHttpTransaction| a nsCOMPtr?  

Yes, I am fairly sure you can do this [1], but if not, just ingore me.  Also 
check out the posting in the xpcom newsgroup "nsCOMPtr<someConcreteClass> -- 
safe? appropriate? here's the answer" by scc.

If you can't or don't want to, just combined the AddRef and the assignment 
together.

Also can you rename "trans" to something like "transKungFuDeathGrip".

[1] 
http://lxr.mozilla.org/seamonkey/source/xpcom/proxy/src/nsProxyEventObject.cpp#1
61

do that and sr=me
Whiteboard: [PDT+] need eta → [PDT+] patch available, need sr=/a=
Whiteboard: [PDT+] patch available, need sr=/a= → [PDT+] r=bbaetz, sr=dougt, need a=
darin, is this ready to go?
this patch is ready to go... dougt signed off on it, despite some disagreement
about some few minor things.  seeking a= now.
*** Bug 87105 has been marked as a duplicate of this bug. ***
*** Bug 87114 has been marked as a duplicate of this bug. ***
a=chofmann
Whiteboard: [PDT+] r=bbaetz, sr=dougt, need a= → [PDT+] r=bbaetz, sr=dougt, a=chofmann (ready to checkin)
fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: [PDT+] r=bbaetz, sr=dougt, a=chofmann (ready to checkin) → [PDT+] r=bbaetz, sr=dougt, a=chofmann (ready to checkin), critical for 0.9.2
-> code verification to bradley
QA Contact: benc → bbaetz
VERIFIED checked in/no longer crashing.
Blocks: 84264, 89875
Status: RESOLVED → VERIFIED
QA Contact: bbaetz → benc
Summary: [crash] @nsHttpTransaction::IsDone() [mTransaction is NULL] → Don't expect connetion: headers from http/1.1 servers; and send proxy-connection, not connection, to proxy servers
Whiteboard: [PDT+] r=bbaetz, sr=dougt, a=chofmann (ready to checkin), critical for 0.9.2 → checked in on trunk
Um, what happened here? I verified a bug, and it took fields from another bug of
mine (bug 87047)?

Restoring fields from bug_activity.cgi, but this is really odd...
No longer blocks: 84264, 89875
QA Contact: benc → bbaetz
Summary: Don't expect connetion: headers from http/1.1 servers; and send proxy-connection, not connection, to proxy servers → [crash] @nsHttpTransaction::IsDone() [mTransaction is NULL]
Whiteboard: checked in on trunk → [PDT+] r=bbaetz, sr=dougt, a=chofmann (ready to checkin), critical for 0.9.2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: