Fixes bug 86973 "[crash] @nsHttpTransaction::IsDone() [mTransaction is NULL]" r=bbaetz, sr=dougt, a=chofmann